# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py, modules/catalyst/util.py:
  Add catalyst.util.create_tarball() helper function and modify snapshot
  target to use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/snapshot.py, modules/catalyst/util.py:
  Create catalyst.util.rsync() helper function

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/util.py:
  Modify code to use catalyst.util.remove_path() helper everywhere
  Include globbing support in remove_path()
  Create catalyst.util.create_symlink() helper and modify code to use it

  13 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  Add catalyst.util.remove_dir() helper function

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/util.py:
  Remove unnecessary os.path import

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/lock.py, modules/catalyst/spawn.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/netboot.py:
  Replace usage of types module and type() with isinstance()

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/snapshot.py,
  modules/catalyst/util.py:
  Create catalyst.util.empty_tree() helper function and use it all over

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> TODO,
  modules/catalyst/target/generic.py:
  Add ability to invalidate all further autoresume points
